feat(claim): implement progressive territory tax, grace periods, flags, and web admin controls